Fix landscape layout issues for banners on default layout up to iPhone6 size devices

--- a/_scss/3-default-components/_index-banners.scss
+++ b/_scss/3-default-components/_index-banners.scss
@@ -72,6 +72,24 @@
   }
 }
 
+@media screen and (max-height: 320px) and (max-width: 568px) {
+  .top-banner {
+    height: 110px;
+  }
+}
+
+@media screen and (max-height: 360px) and (max-width: 640px) {
+  .top-banner {
+    height: 100px;
+  }
+}
+
+@media screen and (max-height: 375px) and (max-width: 667px) {
+  .top-banner {
+    height: 100px;
+  }
+}
+
 .hero {
   background-image: url(/img/hero_mobile_small.jpg);
   background-repeat: no-repeat;
@@ -149,5 +167,26 @@
   .hero {
     height: 1800px;
     margin-top: -240px;
+  }
+}
+
+@media screen and (max-height: 320px) and (max-width: 568px) {
+  .hero {
+    height: 430px;
+    margin-top: -45px;
+  }
+}
+
+@media screen and (max-height: 360px) and (max-width: 640px) {
+  .hero {
+    height: 490px;
+    margin-top: -50px;
+  }
+}
+
+@media screen and (max-height: 375px) and (max-width: 667px) {
+  .hero {
+    height: 510px;
+    margin-top: -50px;
   }
 }
